I abandond the text-align:center; in favor of manually putting them where they need to be with margin, this may cause complications in the future due to different screen resulutions but apparently we dont have to worry about that I think, Next I will color, add stroke, add effects and change the size

--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -6,8 +6,12 @@ text-align: center;
 text-align: center;
 }
 .head2{    
-text-align: center;
+margin-left: 700px;
+width: 20px;
+margin-top: -19px;
 }
-.head3{
-text-align: center;
+.head3{ 
+margin-left: 800px;
+width: 20px;
+margin-top: -19px;
 }
