--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -1,17 +1,20 @@
 header{
 text-align: center;
-
+font-size: 90px;
 }
 .head1{
 text-align: center;
+font-size: 70px;
 }
 .head2{    
-margin-left: 700px;
+margin-left: 490px;
 width: 20px;
-margin-top: -19px;
+margin-top: -79px;  
+font-size: 70px;
 }
 .head3{ 
-margin-left: 800px;
+margin-left: 950px;
 width: 20px;
-margin-top: -19px;
+margin-top: -79px;  
+font-size: 70px;
 }
