--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -1,13 +1,16 @@
 header{
 text-align: center;
 font-size: 90px;
+color:white;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
 }
 .head1{
 text-align: center;
 font-size: 70px;
 }
 .head2{    
-margin-left: 490px;
+margin-left: 470px;
 width: 20px;
 margin-top: -79px;  
 font-size: 70px;
@@ -17,4 +20,10 @@ margin-left: 950px;
 width: 20px;
 margin-top: -79px;  
 font-size: 70px;
+}
+.button{
+text-decoration: none;
+color: rgb(255, 255, 255);
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
 }
