added a border around the money and changed their position to line up better, also added background color which i will make change when you hover

--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -6,24 +6,38 @@ color:white;
 -webkit-text-stroke-color: black;
 }
 .head1{
-text-align: center;
 font-size: 70px;
+width:110px;
+margin-left:710px;
+border-color: rgb(0, 0, 0); 
+border-width: 2px; 
+border-style: solid; 
+background-color: black;
 }
 .head2{    
 margin-left: 470px;
-width: 20px;
-margin-top: -79px;  
+width: 80px;
+margin-top: -85px;  
 font-size: 70px;
+border-color: rgb(0, 0, 0); 
+border-width: 2px; 
+border-style: solid; 
+background-color: black;
 }
 .head3{ 
 margin-left: 950px;
-width: 20px;
-margin-top: -79px;  
+width: 110px;
+margin-top: -85px;  
 font-size: 70px;
+border-color: rgb(0, 0, 0); 
+border-width: 2px; 
+border-style: solid; 
+background-color: black;
 }
 .button{
 text-decoration: none;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
+
 }
