added text under the buttons, will make them fade in when you press the button

--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -52,3 +52,11 @@ background-color: black;
 a:hover {
     background: #ffffff;
 }
+.donations{
+text-align: center;
+font-size: 90px;
+}
+.don5{
+text-align: center;
+}
+.don10{}
