--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -52,11 +52,28 @@ background-color: black;
 a:hover {
     background: #ffffff;
 }
+
 .donations{
 text-align: center;
-font-size: 90px;
 }
 .don5{
-text-align: center;
+margin-top:-0px;
 }
-.don10{}
+.don10{
+margin-top: -0px;
+}
+.don20{
+margin-top: -0px;
+}
+p:target {
+animation: fadeInAnimation ease 1s;
+animation-iteration-count: 1;
+animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation{
+    0% {
+        font-size: 90px;
+    }
+    100% {
+         font-size: 1;
+    }
