--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -85,7 +85,7 @@ animation-fill-mode: forwards;
 }
 @keyframes fadeInAnimation{
     0% {
-        font-size: 160px;
+        font-size: 144px;
     }
     100% {
          font-size: 1;
@@ -106,6 +106,7 @@ h1{
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
         letter-spacing: 4px; 
         width: 100.8%;
+        background-color: white;
     }
     h2{
         margin-left: 60px;
@@ -176,3 +177,4 @@ h1{
                 .dropdown:hover .dropdown-content {display: block;}
                 
                 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+               
