I give up on the dollar sign, it impossible i swear, why is somthing this simple this hard OMG, the problem is that the code im trying to fix is base text in html that i cant div or do anything with and any changes I make to the whole code also overrides the code im trying to keep viewable, i'll just have it as 5,10 and 20 and seal with whatever problems that brings

--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -19,6 +19,7 @@ border-width: 2px;
 border-style: solid; 
 background-color: black;
 border-width: 2px 0px 2px 1.5px;
+opacity:100%;
 
 }
 .head2{    
@@ -70,6 +71,7 @@ text-decoration: none;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
+display: show;
 }
 .don20{
 margin-top: -0px;
