--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -88,7 +88,7 @@ animation-fill-mode: forwards;
 }
 @keyframes fadeInAnimation{
     0% {
-        font-size: 144px;
+        font-size: 114px;
     }
     100% {
          font-size: 1;
@@ -181,3 +181,10 @@ h1{
                 
                 .dropdown:hover .dropbtn {background-color: #3e8e41;}
                
+.output{
+text-align: center;
+color: rgb(255, 255, 255);
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+font-size: 40px;
+}
