added body than body div to ourteam page, its going to be a page where i introduce all the different bins as if they were members of a team the kids will love it

--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -44,6 +44,7 @@ border-color: rgb(0, 0, 0);
 border-width: 2px; 
 border-style: solid;
 border-radius: 4px;
+margin-top:70px;
 }
     .bodygraph1{
 margin-left: 810px;
