--- a/CSS/DM/ourteam.css
+++ b/CSS/DM/ourteam.css
@@ -18,11 +18,35 @@ font-size: 21px;
 margin-top:-160px;
 }
 .mem1img{
-margin-left:70px;
+margin-left:110px;
 }
 .mem1body{
-margin-left:300px;
+margin-left:360px;
 margin-top:-35px;
+}
+.mem2{
+border-color: rgb(0, 0, 0); 
+border-width: 2px; 
+border-style: solid; 
+margin-top: 90px;
+height:170px;
+color: white;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+font-size: 21px;
+}
+.mem2text{
+margin-top:-110px;
+
+}
+.mem2img{
+margin-left:80px;
+
+}
+.mem2body{
+margin-left:360px;
+margin-top:-30px;
 }
 h1{
     color: rgb(255, 255, 255);
