--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -133,3 +133,16 @@ margin-left: -74px;
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+footer{
+    border-color: rgb(0, 0, 0); 
+    border-width: 2px; 
+    border-style: solid; 
+height: 200px;
+background-color: rgb(90, 90, 90);
+}
+.footerout{
+
+
+
+}
