--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -140,9 +140,6 @@ footer{
     border-style: solid; 
 height: 200px;
 background-color: rgb(90, 90, 90);
-}
-.footerout{
-
-
-
+width: 101.6%;
+margin-left: -20px;
 }
