--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -143,3 +143,18 @@ background-color: rgb(90, 90, 90);
 width: 101.6%;
 margin-left: -20px;
 }
+.face{
+height: 40px;
+}
+.twit{
+height: 40px;
+}
+.tube{
+height: 40px;
+}
+.images{
+margin-right: -0px;    
+border-color: rgb(0, 0, 0); 
+border-width: 2px; 
+border-style: solid;
+}
