--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -17,7 +17,7 @@ text-align:center;
 }
     .h1div{
 -webkit-text-stroke-color: black;
-border-color: rgb(0, 0, 0); 
+border-color: rgb(255, 0, 0); 
 border-width: 2px;
 border-style: solid;
 margin:-8px; 
@@ -27,7 +27,7 @@ letter-spacing: 4px;
 width: 100.8%;
     }
     .bodydiv{
-border-color: rgb(0, 0, 0); 
+border-color: rgb(0, 255, 68); 
 border-width: 2px; 
 border-style: solid; 
 width: 100.79%;
@@ -38,9 +38,10 @@ background-repeat: repeat;
 background-size: cover; 
 margin-top: 29px;
 }
+/*the before and after image*/
     .PIE{
 height: 300px;
-border-color: rgb(0, 0, 0); 
+border-color: rgb(255, 0, 225); 
 border-width: 2px; 
 border-style: solid;
 border-radius: 4px;
@@ -49,14 +50,14 @@ margin-top:70px;
     .bodygraph1{
 margin-left: 710px;
 margin-top: -20px;
-border-color: rgb(0, 0, 0); 
+border-color: rgb(229, 255, 0); 
 border-width: 2px;
 border-style: solid;
 width:540px;
-height: 200px;
+height: 380px;
 }
     .bodytext{
-border-color: rgb(0, 0, 0); 
+border-color: rgb(76, 0, 255); 
 border-width: 2px; 
 border-style: solid; 
 margin-top: 10px;
@@ -85,7 +86,7 @@ width: 98%;
 text-decoration: none; 
 } 
     .h1div{
-border-color: rgb(0, 0, 0); 
+border-color: rgb(0, 255, 242); 
 border-width: 2px; 
 border-style: solid; 
 margin:-8px; 
@@ -94,8 +95,8 @@ font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
 letter-spacing: 4px;
 }
     .video{
-margin-top: -100px;
-margin-left: 378px;
+margin-top: -450px;
+margin-left: 20px;
 }
     .form{
 margin-left:430px;
