--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -1,8 +1,8 @@
-html{
+    html {
 background-image:url("funny photots/b.jpg");
 background-size: cover; 
 }
-header{
+    header {
 text-align: center;
 font-size: 90px;
 color:white;
@@ -11,7 +11,7 @@ color:white;
 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
 
 }
-.head1{
+    .head1 {
 font-size: 70px;
 width:74px;
 margin-left:710px;
@@ -22,7 +22,7 @@ border-width: 2px 0px 2px -2px;
 opacity:100%;
 
 }
-.head2{    
+    .head2 {    
 margin-left: 470px;
 width: 40px;
 margin-top: -85px;  
@@ -31,7 +31,7 @@ border-style: solid;
 background-color: black;
 border-width: 2px 0px 2px 1.5px;
 }
-.head3{ 
+    .head3 { 
 margin-left: 950px;
 width: 75px;
 margin-top: -85px;  
@@ -41,7 +41,7 @@ border-style: solid;
 background-color: black;
 border-width: 2px 0px 2px 1.5px;
 }
-.button{
+    .button {
 text-decoration: none;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
@@ -51,22 +51,23 @@ border-style: solid;
 background-color: black;
 
 }
-a:hover {
-    background: #ffffff;
+    a:hover {
+background: #ffffff;
 }
 
-.donations{
+    .donations {
 text-align: center;
 font-size: 0px;
 }
-.don5{
+    .don5 {
 margin-top:-0px;
 text-decoration: none;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
+
 }
-.don10{
+    .don10 {
 margin-top: -0px;
 text-decoration: none;
 color: rgb(255, 255, 255);
@@ -74,117 +75,120 @@ color: rgb(255, 255, 255);
 -webkit-text-stroke-color: black;
 display: show;
 }
-.don20{
+    .don20 {
 margin-top: -0px;
 text-decoration: none;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
 }
-p:target {
+    p:target {
 animation: fadeInAnimation ease 5s;
 animation-iteration-count: 1;
 animation-fill-mode: forwards;
 }
 @keyframes fadeInAnimation{
     0% {
-        font-size: 114px;
-    }
-    100% {
-         font-size: 1;
-    }
+    font-size: 114px;
 }
-h1{
-    color: rgb(255, 255, 255);
-    text-align:center;
-    -webkit-text-stroke-width: 1px;
-    }
-    .h1div{
-  -webkit-text-stroke-color: black;
-        border-color: rgb(0, 0, 0); 
-        border-width: 2px;
-        border-style: solid;
-        margin:-8px; 
-        margin-left: -8px; 
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
-        letter-spacing: 4px; 
-        width: 100.8%;
-        background-color: white;
-    }
-    h2{
-        margin-left: 60px;
-        margin-top: -40px;
-        font-family:sans-serif;
-        letter-spacing: 5px;
-        color: rgb(255, 255, 255);
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: black;
-        }
-            h3{
-        margin-top:-55px;
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: black;
-        color: rgb(255, 255, 255);
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
-        text-align: right;
-        width: 98%;
-        text-decoration: none; 
-        } 
-        .umaru{
-            width: 70px;
-            margin-top: -80px;
-            }
-                .UM{
-            height: 50px;
-            margin-top: 10px;
-            margin-left: 20px;
-            }
-            .form{
-                margin-left:430px;
-                margin-top:-200px;
-                -webkit-text-stroke-width: 1px;
-                -webkit-text-stroke-color: black;
-                color: rgb(255, 255, 255);
-                }
-                    .dropbtn {
-                background-color: #ffffff;
-                color: white;
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
-                -webkit-text-stroke-width: 1px;
-                -webkit-text-stroke-color: black;
-                font-size: 30px;
-                border: none;
-                }
-                    .dropdown {
-                position: center;
-                display: inline-block;
-                }
-                    .dropdown-content {
-                display: none;
-                position: absolute;
-                background-color: #f1f1f1;
-                min-width: 160px;
-                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                z-index: 1;
-                margin-left: -74px;
-                }
-                    .dropdown-content a {
-                  color: black;
-                  padding: 12px 16px;
-                  text-decoration: none;
-                  display: block;
-                }
-                
-                .dropdown-content a:hover {background-color: #ddd;}
-                
-                .dropdown:hover .dropdown-content {display: block;}
-                
-                .dropdown:hover .dropbtn {background-color: #3e8e41;}
-               
-.output{
+100% {
+    font-size: 1;
+}
+}
+    h1 {
+color: rgb(255, 255, 255);
+text-align:center;
+-webkit-text-stroke-width: 1px;
+}
+    .h1div {
+-webkit-text-stroke-color: black;
+border-color: rgb(0, 0, 0); 
+border-width: 2px;
+border-style: solid;
+margin:-8px; 
+margin-left: -8px; 
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
+letter-spacing: 4px; 
+width: 100.8%;
+background-color: white;
+}
+    h2 {
+margin-left: 60px;
+margin-top: -40px;
+font-family:sans-serif;
+letter-spacing: 5px;
+color: rgb(255, 255, 255);
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+}
+    h3 {
+margin-top:-55px;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+color: rgb(255, 255, 255);
+font-family:"Lucida Console", monospace;
+text-align: right;
+width: 98%;
+text-decoration: none; 
+} 
+    .umaru {
+width: 70px;
+margin-top: -80px;
+}
+    .UM {
+height: 50px;
+margin-top: 10px;
+margin-left: 20px;
+}
+    .form {
+margin-left:430px;
+margin-top:-200px;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+color: rgb(255, 255, 255);
+}
+    .dropbtn {
+background-color: #ffffff;
+color: white;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: black;
+font-size: 30px;
+border: none;
+}
+    .dropdown {
+position: center;
+display: inline-block;
+}
+    .dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+margin-left: -74px;
+}
+    .dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}   
+    .dropdown-content a:hover {
+background-color: #ddd;
+}   
+    .dropdown:hover .dropdown-content {
+display: block;
+}
+    .dropdown:hover .dropbtn {
+background-color: #3e8e41;
+}            
+.output {
 text-align: center;
 color: rgb(255, 255, 255);
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
+font-family:"Lucida Console", monospace;
 font-size: 40px;
 }
