--- a/CSS/DM/index.css
+++ b/CSS/DM/index.css
@@ -142,14 +142,16 @@ padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
-footer {
+    .dropdown-content a:hover {
+background-color: #ddd;
+}
+    .dropdown:hover .dropdown-content {
+display: block;
+}
+    .dropdown:hover .dropbtn {
+background-color: #3e8e41;
+}
+    footer {
 border-color: rgb(0, 0, 0); 
 border-width: 2px; 
 border-style: solid; 
@@ -157,20 +159,24 @@ height: 200px;
 background-color: rgb(55, 55, 55);
 width: 101.6%;
 margin-left: -20px;
+text-align: center;
+font-size: 30px;
+font-family:"Lucida Console", monospace;
+color: #ffffff;
 }
-.face {
+    .face {
 height: 40px;
 float: right;
 margin-right: 120px;
 margin-top: 80px;
 }
-.twit {
+    .twit {
 height: 40px;
 float: right;
 margin-right: 550px;
 margin-top: 80px;
 }
-.tube {
+    .tube {
 height: 40px;
 float: right;
 margin-right: 590px;
