I just imported a working calculator from stack overflow, it seems that either my computer is haunted, my VSC is broken or Java has had a change recently that breaks my code

--- a/CSS/DM/donations.css
+++ b/CSS/DM/donations.css
@@ -10,6 +10,10 @@ color:white;
 -webkit-text-stroke-color: black;
 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; 
 }
+    body{
+border: none;
+
+}
     .head1 {
 font-size: 70px;
 width:74px;
